2004-02-14  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-declaration.[ch]:
	(cr_declaration_nr_props),
	(cr_declaration_get_from_list),
	(cr_declaration_get_by_prop_name):
	applied a patch from Rob BUIS<rwlbuis@xs4all.nl> that adds
	these api entry points.

2004-02-13  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-declaration.c: 
	(cr_declaration_parse_list_from_buf): when we encounter an EOF
	right after a ';' don't return an error.
	* src/cr-parser.c: 
	(CHECK_PARSING_STATUS_ERR): fix a possibly nasty typo.
	(cr_parser_parse_property): when there is an error here,
	return the underlying error instead of returning just CR_PARSING_ERROR.
	(cr_parser_parse_declaration): when we encounter an EOF just at
	the beginning of parsing, return CR_END_OF_INPUT_ERROR instead
	of CR_PARSING_ERROR. More generaly, we should always return 
	CR_END_OF_INPUT_ERROR when we encounter that error, and not return
	CR_PARSING_ERROR instead.
	tests/test4-main.c: 
	(test_cr_declaration_parse_list): updated this to reflect catch
	trailing ';' at the end of declaration list.

2004-02-12  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-declaration.[ch]: 
	(cr_declaration_parse_list_from_buf): added this new api entry point
	to parse comma separated list of property declarations.
	* src/cr-parser.c: 
	(cr_parser_parse_expr): dont return an error when we encounter EOF immediately
	at the end of an expression.
	(cr_parser_get_tknzr): added this new api entry point to get
	the parser's underlying tokenizer.
	* src/cr-statement.h: fixed a comment here.
	* tests/test4-main.c: wrote a test for the new
	cr_declaration_parse_list_from_buf() function.

2004-02-11  Dodji Seketeli  <dodji@gnome.org>

	* src/Makefile.am: make sure headers go in $prefix/include/libcroco/libcroco .

2004-02-10  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-fonts.c: debugged serialization stuffs
	* src/cr-style.c: more serialization debugging
	
2004-02-08  dodji  <dodji@gnome.org>
