@@ -1,7 +1,13 @@
-Dodji Seketeli <dodji@seketeli.org> 
-###################################
+Dodji Seketeli <dodji@gnome.org> 
+-----------------------------------
 Initial Author, main maintainer and main architect.
 
-Gael Chamoulaud <strider@freespiders.org>
+Gael Chamoulaud <strider@gnome.org>
 ##########################################
 Programmer.
+
+Rob BUIS <rwlbuis@xs4all.nl>
+----------------------------
+Sent several patches.
+
+
